--- a/components/error/error.module.scss
+++ b/components/error/error.module.scss
@@ -1,9 +1,10 @@
-@import '../../styles/variables';
+@import "../../styles/variables";
 
 .error {
-  text-align: center;
   width: fit-content;
   margin: 30vh auto 0;
+
+  text-align: center;
 
   h1 {
     margin-bottom: 20px;
