--- a/components/button/button.module.scss
+++ b/components/button/button.module.scss
@@ -1,13 +1,16 @@
-@import '../../styles/variables.scss';
+@import "../../styles/variables.scss";
 
 .button {
   padding: 1.6565rem 2.605rem;
-  color: $color-dark-gray;
-  border-radius: 300px;
+
   border: 2px solid;
-  white-space: nowrap;
+  border-radius: 300px;
+
+  color: $color-dark-gray;
+
   font-size: 1em;
   text-align: center;
+  white-space: nowrap;
 
   &.pistachio {
     background-color: $color-pistachio;
@@ -35,10 +38,12 @@
     border-color: $color-orange;
   }
   &.transparent-light {
-    background-color: transparent;
-    color: $color-smoked-white;
-    border: 1px solid $color-smoked-white;
     padding: 1.719rem 2.24rem;
+
+    background-color: transparent;
+    border: 1px solid $color-smoked-white;
+
+    color: $color-smoked-white;
 
     &:hover {
       background-color: $color-smoked-white;
@@ -46,30 +51,35 @@
     }
   }
   &.transparent-dark {
-    background-color: transparent;
-    color: $color-dark-gray;
-    border: 1px solid $color-dark-gray;
-    padding: 0 0;
     max-width: 60px;
     max-height: 60px;
+
+    padding: 0 0;
+
+    background-color: transparent;
+    border: 1px solid $color-dark-gray;
+    color: $color-dark-gray;
   }
   &.cta-nav {
     padding: 0.9375rem 1.8975rem;
   }
   &.cta-social {
     display: flex;
-    justify-content: center;
     align-items: center;
-    padding: 0;
-    line-height: 1;
+    justify-content: center;
     width: 5rem;
     height: 5rem;
+    padding: 0;
+
+    line-height: 1;
   }
 
   &:hover {
     background-color: $color-dark-gray;
     color: $color-smoked-white;
+
     transform: scale(1.02);
+
     transition: all 0.1s ease-in;
   }
 
@@ -83,9 +93,9 @@
       padding: 1.24rem 1.8975rem;
     }
     &.cta-social {
-      padding: 0;
       width: 3.8rem;
       height: 3.8rem;
+      padding: 0;
     }
   }
 }
