--- a/components/layout/layout.module.scss
+++ b/components/layout/layout.module.scss
@@ -1,7 +1,8 @@
-@import '../../styles/variables';
+@import "../../styles/variables";
 
 .main-wrapper {
   position: relative;
+
   display: flex;
   flex-direction: column;
 }
@@ -22,16 +23,20 @@
   width: 95%;
   max-width: 1440px;
   margin: auto;
-  
+
   @media screen and (max-width: 750px) {
     position: sticky;
-    width: 100%;
-    bottom: 0;    
+    bottom: 0;
+
     order: 1;
-    background-color: $color-smoked-white;
+
+    width: 100%;
     padding: 1em;
     margin: 1em 0;
+
     overflow-x: scroll;
+
+    background-color: $color-smoked-white;
   }
 
   @media screen and (max-width: 500px) {
