--- a/components/post-preview/post-preview.module.scss
+++ b/components/post-preview/post-preview.module.scss
@@ -1,35 +1,41 @@
-@import '../../styles/variables';
+@import "../../styles/variables";
 
 .post-preview {
-  height: 35em;
-  border-radius: 19.41px;
-  overflow: hidden;
-  background-color: #fff;
-  color: $color-dark-gray;
   display: grid;
   grid-template-rows: 2fr 3fr;
+
+  height: 35em;
+
+  overflow: hidden;
+
+  background-color: #fff;
+  border-radius: 19.41px;
+  color: $color-dark-gray;
 }
 
 .image-container {
   position: relative;
+
   overflow: hidden;
 }
 
 .post-text {
-  padding: 1.7em 2.6em 1em 1.75em;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding: 1.7em 2.6em 1em 1.75em;
 }
 
 .post-title {
-  font-size: 1.625em;
   margin-bottom: 0.75em;
+
+  font-size: 1.625em;
   line-height: 1.3;
 }
 
 .post-description {
   filter: opacity(0.7);
+
   font-size: 1.125em;
   line-height: 1.444;
   text-align: justify;
@@ -52,8 +58,9 @@
 
 @media screen and (max-width: 1150px) {
   .post-preview {
-    font-size: 0.75em;
     grid-template-rows: 1.7fr 3.3fr;
+
+    font-size: 0.75em;
   }
 }
 
@@ -63,8 +70,9 @@
   }
 
   .post-title {
-    font-size: 2em;
     margin-bottom: 0;
+
+    font-size: 2em;
   }
 }
 
@@ -105,13 +113,14 @@
     grid-column: 1 / 3;
 
     .post-preview {
-      grid-template-rows: unset;
       grid-template-columns: 4.8fr 7.2fr;
+      grid-template-rows: unset;
     }
 
     .post-title {
-      font-size: 3em;
       margin-bottom: 0.45em;
+
+      font-size: 3em;
     }
 
     .post-description {
