--- a/styles/reset.scss
+++ b/styles/reset.scss
@@ -1,18 +1,20 @@
 html,
 body {
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
   color: inherit;
+
   text-decoration: none;
 }
 
 button {
-  border: none;
   background-color: transparent;
+  border: none;
 }
 
 ul {
@@ -20,7 +22,7 @@ ul {
 }
 
 * {
+  box-sizing: inherit;
   padding: 0;
   margin: 0;
-  box-sizing: inherit;
 }
