--- a/components/post-body/post-body.module.scss
+++ b/components/post-body/post-body.module.scss
@@ -16,71 +16,83 @@
 
 .reactMarkdown {
   font-family: "Recife Text Web", sans-serif;
-  font-size: 1.25em;
-  letter-spacing: -0.02em;
+  font-size: 1em;
   line-height: 1.6;
+  letter-spacing: -0.02em;
 
   * {
     max-width: 100%;
-    margin: 1.6em auto 0;
   }
 
-  @media screen and (max-width: 750px) {
-    font-size: 1em;
+  @media screen and (min-width: 750px) {
+    font-size: 1.25em;
     line-height: 1.75;
+  }
 
-    * {
-      margin-top: 1.4em;
+  @mixin block-width {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+
+    @media screen and (min-width: 750px) {
+      width: 60%;
     }
   }
 
-  @mixin block-text {
-    width: 59.2%;
+  @mixin text-margins {
+    margin-bottom: 1.4rem;
 
-    @media screen and (max-width: 750px) {
-      width: 99%;
+    @media screen and (min-width: 750px) {
+      margin-bottom: 1.6rem;
     }
   }
 
   @mixin heading($font-size-rg, $font-size-sm) {
     font-family: "Studio Feixen Sans", sans-serif;
-    font-size: $font-size-rg;
+    letter-spacing: -0.03em;
+    line-height: 1.334;
+    font-size: $font-size-sm;
     font-weight: 300;
+    margin-top: 2rem;
 
-    @media screen and (max-width: 750px) {
-      font-size: $font-size-sm;
-      letter-spacing: -0.03em;
-      line-height: 1.334;
+    @media screen and (min-width: 750px) {
+      font-size: $font-size-rg;
+      margin-top: 2.85rem;
     }
   }
 
+  > * {
+    @include block-width;
+  }
+
   h1 {
-    @include block-text;
     @include heading(2.5em, 1.8em);
+    @include text-margins;
   }
 
   h2 {
-    @include block-text;
     @include heading(2em, 1.5em);
+    @include text-margins;
   }
 
   h3 {
-    @include block-text;
     @include heading(1.5em, 1.3em);
+    @include text-margins;
   }
 
   h4 {
-    @include block-text;
     @include heading(1.3em, 1.2em);
+    @include text-margins;
   }
 
   h5 {
-    @include block-text;
     @include heading(1.2em, 1.1em);
+    @include text-margins;
   }
+
   h6 {
-    @include block-text;
     @include heading(1.2em, 1em);
+    @include text-margins;
   }
 
   p,
@@ -93,12 +105,21 @@
   section,
   blockquote,
   figcaption {
-    @include block-text;
+    @include text-margins;
   }
 
   img {
     display: block;
-    margin: 0 auto;
+    margin: 2rem auto;
+    width: auto;
+  }
+
+  video {
+    width: auto;
+  }
+
+  iframe {
+    width: auto;
   }
 
   a {
@@ -107,18 +128,32 @@
     overflow-wrap: break-word;
   }
 
-  li {
-    margin-top: 0;
+  ul {
+    list-style-type: disc;
   }
 
-  li:before {
-    content: "\2022";
+  li {
+    padding-left: 1rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+  }
 
-    margin-right: 12px;
+  li::marker {
+    font-weight: 700;
+  }
+
+  blockquote {
+    position: relative;
+    left: 0.25rem;
+    padding: 0 1rem;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+    border-left: 4px solid rgba($color-dark-gray, 0.4);
+    color: $color-dark-gray;
   }
 
   code {
-    padding: 2px 5px;
+    padding: 2px 8px;
 
     background-color: rgba($color-dark-gray, 0.06);
     border-radius: 5px;
@@ -165,8 +200,21 @@
     }
   }
 
-  th,
+  table {
+    border-collapse: collapse;
+    margin-bottom: 2rem;
+  }
+
+  th {
+    border-bottom: 1px solid $color-dark-gray;
+    text-align: left;
+  }
+
   td {
-    padding: 0 4px;
+    padding: 4px 0;
+  }
+
+  tr:nth-of-type(2n) {
+    background-color: rgba($color-green, 0.1);
   }
 }
