Inject a Div when rendering a table (#28)
Why:
 - When rendering a table we want to make it responsive. To make a `table` responsive we need to wrap it around a `div`.

How:
 - Using `react-markdown` render to inject a div when rendering a table.
 - Make the div horizontally scrollable.

--- a/components/post-body/post-body.module.scss
+++ b/components/post-body/post-body.module.scss
@@ -201,15 +201,14 @@
   }
 
   table {
-    display: block;
-    overflow: scroll;
+    width: 100%;
     border-collapse: collapse;
     margin-bottom: 2rem;
+  }
 
-    @media screen and (min-width: 750px) {
-      display: table;
-      min-width: unset;
-    }
+  .table-container {
+    display: block;
+    overflow: scroll;
   }
 
   th {
@@ -221,9 +220,9 @@
   td {
     text-align: center;
     padding: 4px 12px;
-    
+
     @media screen and (min-width: 750px) {
-      padding: 4px 8px;      
+      padding: 4px 8px;
     }
   }
 
