--- a/components/post-body/post-body.module.scss
+++ b/components/post-body/post-body.module.scss
@@ -114,6 +114,12 @@
     width: auto;
   }
 
+  figcaption {
+    margin-top: -22px;
+    font-size: 16px;
+    text-align: center;
+  }
+
   video {
     width: auto;
   }
@@ -124,6 +130,7 @@
 
   a {
     color: $color-green;
+    text-decoration: underline;
 
     overflow-wrap: break-word;
   }
