Prevent left padding on code blocks
Why:
* When using code blocks, there was a `padding-left: 8px` being applied
  to the first line of the code block

How:
* Adding a CSS rule to remove the `padding-left` from `code` elements
  that have a `div` parent

--- a/components/post-body/post-body.module.scss
+++ b/components/post-body/post-body.module.scss
@@ -173,6 +173,10 @@
     white-space: break-spaces;
   }
 
+  div > code {
+    padding-left: 0px;
+  }
+
   pre {
     display: block;
     padding: 20px 0;
