--- a/components/post-body/post-body.module.scss
+++ b/components/post-body/post-body.module.scss
@@ -139,10 +139,18 @@
     list-style-type: disc;
   }
 
+  ul ul {
+    list-style-type: circle;
+  }
+
   li {
-    padding-left: 1rem;
+    margin-left: 1.25rem;
     margin-bottom: 1rem;
     margin-top: 1rem;
+
+    ul, ol {
+      margin-left: 1.25rem;
+    }
   }
 
   li::marker {
